# sfutils

./: .gitattributes  LICENSE  README.md  binary_compare.py  check_unreferenced.py  pyproject.toml  sf2_compiler.py  sf2_constants.py  sf2_decompiler.py  test_compile_speed.py  test_equivalence.py  test_roundtrip.py
src/sfutils/: __init__.py  __main__.py  cli.py  compiler.py  constants.py  decompiler.py  parser.py  riff.py
tests/: test_compile_speed.py  test_equivalence.py  test_roundtrip.py
tools/: analyze_audio_samples.py  analyze_flac_diff.py  analyze_modgen.py  analyze_samples.py  analyze_shdr.py  check_unreferenced.py  chunk_viewer.py  debug_diff.py  sf2_compare.py  show_sample_usage.py
