[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfutils"
version = "0.3.0"
description = "Utilities for working with SoundFont (.sf2, .sf3) files: compiler, decompiler and helpers."
readme = "README.md"
requires-python = ">=3.12"
authors = [ { name = "bakajikara" } ]
license = { file = "LICENSE" }
dependencies = [
  "soundfile",
  "numpy",
  "ffmpeg-python"
]

[project.scripts]
sfutils = "sfutils.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages.find = { where = ["src"], exclude = ["tests", "tools", "tests.*", "tools.*"] }
